Absolute path to favicon

--- a/views/partials/layout.pug
+++ b/views/partials/layout.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     title Jobtech Developer
 
-    link(rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon")
+    link(rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon")
     link(rel="icon" href="favicon.ico?v=2" type="image/x-icon")
     link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
