--- a/views/pages/assets/cv-with-ms-word.pug
+++ b/views/pages/assets/cv-with-ms-word.pug
@@ -5,11 +5,11 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .product-wrapper
     .breadbrumbs-indent
-      +breadbrumbs('Home', 'Products', 'CV with MS Word')
+      +breadbrumbs('Home', 'Assets', 'CV with MS Word')
     +product-menu(3)
     .product-content
       h2 CV with MS Word
