--- a/views/pages/assets/historical-job-postings.pug
+++ b/views/pages/assets/historical-job-postings.pug
@@ -5,11 +5,11 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .product-wrapper
     .breadbrumbs-indent
-      +breadbrumbs('Home', 'Products', 'Historical Job Postings')
+      +breadbrumbs('Home', 'Assets', 'Historical Job Postings')
     +product-menu(1, 4)
     .product-content
       h2 Historical Job Postings
