--- a/views/pages/assets/index.pug
+++ b/views/pages/assets/index.pug
@@ -5,43 +5,44 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .container-fluid.our-products
     //- +breadbrumbs('Home', 'Products')
 
     .row
       .col-sm-12
-        h2.section-header.text-center APIs
+        h2.section-header.text-center API:s / Widgets / Datasets
+
     .row.puffs
       .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/platsbanken")
-          +puff('api-puff.jpg', 'Platsbanken', 'All the current job postings available on Platsbanken')
+        a(href="/assets/platsbanken")
+          +puff('api-puff.jpg', 'Platsbanken', 'All the current job postings available on Platsbanken', 'API')
       .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/occupations")
-          +puff('occupation-puff.jpg', 'Occupation', 'Occupational description of 450 different occupations, with forecasts')
-      .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/office-information")
+        a(href="/assets/occupations")
+          +puff('occupation-puff.jpg', 'Occupation', 'Occupational description of 450 different occupations, with forecasts', 'API')
+      //- .col-sm-6.col-md-4.col-lg-3
+        //- a(href="/assets/office-information")
           +puff('kontor-puff.jpg', 'Office Information', 'Get adress information to all of Arbetsförmedlingen’s offices')
       .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/historical-job-postings")
-          +puff('data-analysis-puff.jpg', 'Historical Job Postings', 'All job postings from Platsbanken 2006-2016')
+        a(href="/assets/historical-job-postings")
+          +puff('data-analysis-puff.jpg', 'Historical Job Postings', 'All job postings from Platsbanken 2006-2016', 'DATASETS')
       .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/occupation-forecasts")
-          +puff('dev-services-puff.jpg', 'Occupation Forecasts', 'Short and long-term forecasts of labour demand for different occupations')
-    .row
+        a(href="/assets/occupation-forecasts")
+          +puff('dev-services-puff.jpg', 'Occupation Forecasts', 'Short and long-term forecasts of labour demand for different occupations', 'API')
+    //- .row
       .col-sm-12
         h2.section-header.text-center Developer Services
-    .row.puffs
+    //- .row.puffs
       .col-sm-6.col-md-4.col-lg-3
         a(href="http://historik.azurewebsites.net" target="_blank")
           +puff('history-analysis-puff.jpg', 'Historical Data Analysis', 'Make smarter decisions with past data on job trends in various industry sectors')
       .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/cv-with-ms-word")
+        a(href="/assets/cv-with-ms-word")
           +puff('cv-puff.jpg', 'CV with MS Word', 'A plugin that suggests appropriate job vacancies based on text analysis')
       .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/open-hack")
+        a(href="/assets/open-hack")
           +puff('open-hack-puff.jpg', 'Open Hack', 'Visualization of current job postings in Platsbanken')
       .col-sm-6.col-md-4.col-lg-3
-        a(href="/products/labour-market-competition")
+        a(href="/assets/labour-market-competition")
           +puff('labour-market-puff.png', 'Labour market competition', 'Win SEK 2 million and be part of developing a labour market for all')
