--- a/views/pages/assets/labour-market-competition.pug
+++ b/views/pages/assets/labour-market-competition.pug
@@ -5,11 +5,11 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .product-wrapper
     .breadbrumbs-indent
-      +breadbrumbs('Home', 'Products', 'Labour market competition')
+      +breadbrumbs('Home', 'Assets', 'Labour market competition')
     +product-menu(5)
     .product-content
       h2 Labour market competition
