--- a/views/pages/assets/open-hack.pug
+++ b/views/pages/assets/open-hack.pug
@@ -5,11 +5,11 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .product-wrapper
     .breadbrumbs-indent
-      +breadbrumbs('Home', 'Products', 'Open Hack')
+      +breadbrumbs('Home', 'Assets', 'Open Hack')
     +product-menu(4)
     .product-content
       h2 Open Hack
