--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,17 +1,20 @@
 footer
   .social-media
     p Follow us:
-    a(href="https://www.facebook.com/Arbetsformedlingen/" target="_blank")
+    //- a(href="https://www.facebook.com/Arbetsformedlingen/" target="_blank")
       img(src="/images/social/Facebook_White.png")
-    a(href="https://www.instagram.com/arbetsformedlingen/" target="_blank")
+    //- a(href="https://www.instagram.com/arbetsformedlingen/" target="_blank")
       img(src="/images/social/Instagram_White.png")
-    a(href="https://www.linkedin.com/company-beta/162496/" target="_blank")
+    //- a(href="https://www.linkedin.com/company-beta/162496/" target="_blank")
       img(src="/images/social/LinkedIN_White.png")
     a(href="https://twitter.com/pressaf?lang=en" target="_blank")
       img(src="/images/social/Twitter_White.png")
-    a(href="https://www.youtube.com/user/arbetsformedlingen" target="_blank")
+    a(href="https://github.com/jobtechdev" target="_blank")
+      img(src="/images/social/GitHub_White.png")
+    //- a(href="https://www.youtube.com/user/arbetsformedlingen" target="_blank")
       img(src="/images/social/Youtube_White.png")
 
   .powered-by
     p <a href="#">Terms & Conditions</a>
-    p Powered by <a href="https://www.arbetsformedlingen.se/">Arbetsförmedlingen</a>
+    p
+    //- p Powered by <a href="https://www.arbetsformedlingen.se/">Arbetsförmedlingen</a>
