--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -11,11 +11,13 @@ nav.navbar.navbar-default
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         li
-          a(href='/products') Products
+          a(href='/assets') Assets
             span.sr-only (current)
         li
-          a(href='/our-vision') Our vision
+          a(href='/vision') Vision
         li
-          a(href='/insights') Insights
+          a(href='/showcase') Showcase
+        //- li
+        //-   a(href='/insights') Insights
         li
           a(href='/news') News
