--- a/styles/_subpages.scss
+++ b/styles/_subpages.scss
@@ -1,6 +1,6 @@
 
 header {
-  margin-top: -70px;
+  margin-top: -85px;
   margin-bottom: 20px;
   height: 230px;
   background-size: 100%;
@@ -8,7 +8,7 @@ header {
   &.products {
     background-image: url(#{$img-path}product-header.jpg);
   }
-  &.insights {
+  &.showcase {
     background-image: url(#{$img-path}insights-header.jpg);
   }
   &.vision {
@@ -18,8 +18,8 @@ header {
     background-image: url(#{$img-path}news-header.jpg);
   }
   @media screen and (max-width: $small-devices) {
-    height: 100px;
-    padding: 30px 0 0 0;
+    height: 110px;
+    padding: 45px 0 0 0;
     background-size: 150%;
   }
 
@@ -184,9 +184,38 @@ header {
   }
 
   .news-content {
-    iframe {
-      margin: auto !important;
-      display: block !important;
+    padding: 20px 20px;
+    min-height: 300px;
+
+    .news-feed {
+      h2 {
+        border-bottom: 1px solid rgba(15,70,100,.12);
+        margin-top: 70px;
+      }
+      h2:first-child {
+        margin-top: 4px;
+      }
     }
+    .twitter-feed {
+      @media screen and (max-width: $medium-devices) {
+        margin-top: 70px;
+      }
+      iframe {
+      }
+    }
+  }
+}
+
+.showcase-description {
+  font-size: 19px;
+
+  &:first-child {
+    margin-bottom: 0px;
+  }
+  @media screen and (max-width: $small-devices) {
+    &:first-child {
+      margin-bottom: 20px;
+    }
+    font-size: 14px;
   }
 }
