--- a/views/pages/assets/occupation-forecasts.pug
+++ b/views/pages/assets/occupation-forecasts.pug
@@ -5,11 +5,11 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .product-wrapper
     .breadbrumbs-indent
-      +breadbrumbs('Home', 'Products', 'Occupation Forecast')
+      +breadbrumbs('Home', 'Assets', 'Occupation Forecast')
     +product-menu(1, 5)
     .product-content
       h2 Occupation Forecasts
