--- a/views/pages/assets/occupations.pug
+++ b/views/pages/assets/occupations.pug
@@ -5,11 +5,11 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .product-wrapper
     .breadbrumbs-indent
-      +breadbrumbs('Home', 'Products', 'Occupation')
+      +breadbrumbs('Home', 'Assets', 'Occupation')
     +product-menu(1, 2)
     .product-content
       h2 Occupation
