--- a/views/pages/assets/office-information.pug
+++ b/views/pages/assets/office-information.pug
@@ -5,11 +5,11 @@ block content
   include ../../partials/nav.pug
 
   header.products
-    h1.page-title Products
+    h1.page-title Assets
 
   .product-wrapper
     .breadbrumbs-indent
-      +breadbrumbs('Home', 'Products', 'Office Information')
+      +breadbrumbs('Home', 'Assets', 'Office Information')
     +product-menu(1, 3)
     .product-content
       h2 Office Information
