--- a/views/pages/news.pug
+++ b/views/pages/news.pug
@@ -11,5 +11,27 @@ block content
     +breadbrumbs('Home', 'News')
 
     .news-content
-      a.twitter-timeline(data-width="600" href="https://twitter.com/PressAf") Tweets by PressAf
-      script(async src="//platform.twitter.com/widgets.js" charset="utf-8")
+      .container-fluid.our-vision
+        .row
+          .col-md-7
+            .news-feed
+              h2 Announcements
+              p <i>Announcements soon to be announced</i>
+              h2 Events/ Hackatons
+              h3 Labour market competition
+              p <b>Be part of developing a labour market for all and have a chance to win 2 million SEK</b>
+
+              p Submit a digital solution that makes it easier to employ or to find a job that matches people´s different capacity for work. Or develop an innovative idea or solution that will make workplaces more accessible to everyone, or will help employers to see competence and opportunities instead of barriers.
+
+              p Every winner in the innovation competition will receive expert support and financing up to a total of SEK 2 million. The competition is a collaboration between PTS and Arbetsförmedlingen.
+
+              p Find out more <a href="http://www.pts.se/innovation14en">http://www.pts.se/innovation14en</a>  or <a href="http://www.pts.se/innovation14">http://www.pts.se/innovation14</a>
+
+              br
+
+              img.img-responsive(src="/images/bild_eng_221x221.png")
+          .col-md-5
+            .twitter-feed
+              a.twitter-timeline(data-width="600" href="https://twitter.com/PressAf") Tweets by PressAf
+              script(async src="//platform.twitter.com/widgets.js" charset="utf-8")
+
