Update descriptions in historic data table

--- a/views/pages/assets/historical-job-postings.pug
+++ b/views/pages/assets/historical-job-postings.pug
@@ -51,10 +51,10 @@ block content
                 tbody
                   tr
                     td ANTAL_AKT_PLATSER
-                    td
+                    td Number of placements
                   tr
                     td PLATSBESKRIVNING
-                    td Ad text
+                    td Job ad text
                   tr
                     td ADRESSLAND
                     td Country (Sweden if not specified)
@@ -63,13 +63,13 @@ block content
                     td Employer name
                   tr
                     td ARBETSDRIFT
-                    td
+                    td Work information
                   tr
                     td ARBETSTID
-                    td
+                    td Working hours
                   tr
                     td BESKR_ARBETSDRIFT
-                    td
+                    td Additional work information
                   tr
                     td FORSTA_PUBLICERINGSDATUM
                     td Publication date
@@ -78,25 +78,25 @@ block content
                     td Municipality code
                   tr
                     td PLATSNUMMER
-                    td
+                    td Unique id
                   tr
                     td PLATSRUBRIK
-                    td
+                    td Job ad heading
                   tr
                     td POSTORT
-                    td
+                    td District
                   tr
                     td SISTA_ANSOK_PUBLDATUM
-                    td
+                    td Last apply date
                   tr
                     td TILLTRADE
-                    td
+                    td Admission information
                   tr
                     td VARAKTIGHET
-                    td
+                    td Duration
                   tr
                     td YRKE_ID
-                    td SSYK occupation id
+                    td Occupation id
 
             p All fields are strings and may be nullable, i.e. no data may be given for a field.
 
