Add contact email address

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -6,13 +6,13 @@ block content
 
   .jumbotron
     .container
-      h1.tagline Jobtech Developer
+      h1.tagline JobTech Developer
       p.subtitle Powerful APIs, widgets and datasets for you to develop the missing app
 
   .container-fluid.work-in-progress
     .row
       .col-lg-12
-        p This website is a work in progress. We invite you to explore JobTech and give us your valuable feedback. <a href="#">Email us</a>
+        p This website is a work in progress. We invite you to explore JobTech and give us your valuable feedback. <a href="mailto:jonas.sodergren@arbetsformedlingen.se">Email us</a>
 
 
   .container-fluid.our-products
