--- a/views/pages/showcase.pug
+++ b/views/pages/showcase.pug
@@ -10,7 +10,7 @@ block content
   .container-fluid.our-products
     //- +breadbrumbs('Home', 'Products')
     p.showcase-description.text-center Latest applications that have been built with our APIs, SDKs, and other developer tools.
-    p.showcase-description.text-center Built an application using our assets? <a href="#">Email us</a> and tell us about it!
+    p.showcase-description.text-center Built an application using our assets? <a href="mailto:jonas.sodergren@arbetsformedlingen.se">Email us</a> and tell us about it!
 
     .row.puffs
       .col-sm-6.col-md-4.col-lg-3
