Change twitter link

--- a/views/pages/news.pug
+++ b/views/pages/news.pug
@@ -32,6 +32,6 @@ block content
               img.img-responsive(src="/images/bild_eng_221x221.png")
           .col-md-5
             .twitter-feed
-              a.twitter-timeline(data-width="600" href="https://twitter.com/PressAf") Tweets by PressAf
+              a.twitter-timeline(data-width="600" href="https://twitter.com/jobtechdev") Tweets by Jobtech developer
               script(async src="//platform.twitter.com/widgets.js" charset="utf-8")
 
