--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -7,7 +7,7 @@ footer
       img(src="/images/social/Instagram_White.png")
     //- a(href="https://www.linkedin.com/company-beta/162496/" target="_blank")
       img(src="/images/social/LinkedIN_White.png")
-    a(href="https://twitter.com/pressaf?lang=en" target="_blank")
+    a(href="https://twitter.com/jobtechdev" target="_blank")
       img(src="/images/social/Twitter_White.png")
     a(href="https://github.com/jobtechdev" target="_blank")
       img(src="/images/social/GitHub_White.png")
