Change links to GitHub assets

--- a/views/pages/assets/historical-job-postings.pug
+++ b/views/pages/assets/historical-job-postings.pug
@@ -20,18 +20,18 @@ block content
         .row
           .col-lg-9
             <b>Description</b>
-            p This dataset consists of 4.2M job postings published on Platsbanken from the year 2006 up to and including 2016. Texts have been anonymized with sentences including names, telephone numbers and email adresses removed. Each listing contains metadata on location, dates, employer name, job type and job details.
+            p This dataset consists of 4.2M job postings (7.7M job positions) published on Platsbanken from the year 2006 up to and including 2016. Texts have been anonymized with sentences including names, telephone numbers and email adresses removed. Each listing contains metadata on location, dates, employer name, job type and any additional job details.
 
             p For a visual overview of this dataset, please see the <a href="http://historik.azurewebsites.net/" target="_blank">dashboard example</a>.
 
             <b>API with basic statistics</b>
-            p We provide a microservice for basic statistics and queries on the dataset. A notebook with examples can be found <a href="#">here</a> (under construction).
+            p We provide a microservice for basic statistics and queries on the dataset. A notebook with examples can be found <a href="https://github.com/simonbe/afhistorik/blob/master/notebooks/API_description.ipynb" target="_blank">here</a> (under construction).
 
             <b>Examples</b>
-            p <a href="http://historik.azurewebsites.net/">Dashboard</a> – Visualize and explore the dataset. Uses the above API. (Source code on GitHub, under construction)
+            p <a href="http://historik.azurewebsites.net/" target="_blank">Dashboard</a> (<a href="https://github.com/simonbe/afhistorik" target="_blank">Source</a>) – Visualize and explore the dataset. Uses the above API.
 
             <b>Data format</b>
-            p Each line in a file contains a job listing in a JSON format (<a href="http://jsonlines.org/">JSON Lines</a>):
+            p Each line in a file contains a job listing in a JSON format (<a href="http://jsonlines.org/" target="_blank">JSON Lines</a>):
 
             pre
               | ...
